# Django-REST-framework

./: README.md  pyproject.toml
books/: models.py  views.py
books/migrations/: 0001_initial.py
core/: settings.py  urls.py
